support starting and stopping entities via task